assets/css/dc.css - fix the carousel overlay font size on mobile
Use the right units!

--- a/assets/css/dc.css
+++ b/assets/css/dc.css
@@ -129,7 +129,7 @@ figure.nojs .hero-images > *:not(:first-child) {
 }
 .hero-image > span {
   grid-area: 1/1;
-  font-size: 6rem;
+  font-size: 4.5vw;
   font-weight: bold;
   min-width: 0;
   min-height: 0;
